Avoid robolectric on JDK 1.8
Add add-opens and also fails to run.